<resources>
    <string name="app_name">Habitrack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next"><![CDATA[Далее ->]]></string>
    <string name="first_on_board">Дисциплина - результат привычек</string>
    <string name="tv_on_board">Привычки - регулярность действий</string>
    <string name="habitracker">Habitracker - следи за своей жизнью</string>
    <string name="go">Вперед!</string>
    <string name="time_sleep">В какое время вы обычно засыпаете?</string>
    <string name="_00">00</string>
    <string name="skip">Пропустить</string>
    <string name="choose_">Чего вы хотите достичь?</string>
    <string name="choose__">Выберите привычки</string>
    <string name="today">Сегодня</string>
    <string name="date">7 мая</string>
    <string name="habits">Привычки</string>
    <string name="create_habit">Создайте привычку</string>
</resources>