<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/OnBoardFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abit8.habitrack.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.abit8.habitrack.presentation.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.abit8.habitrack.presentation.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/OnBoardFragment"
        android:name="com.abit8.habitrack.presentation.ui.onboard.OnBoardFragment"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/userSleep"
        android:name="com.abit8.habitrack.presentation.ui.useronboard.UserSleep"
        tools:layout="@layout/fragment_user_sleep"/>
    <fragment
        android:id="@+id/secondSleepFragment"
        android:name="com.abit8.habitrack.presentation.ui.useronboard.SecondSleepFragment"
        tools:layout="@layout/fragment_second_sleep" />
    <fragment
        android:id="@+id/chooseFragment"
        android:name="com.abit8.habitrack.presentation.ui.useronboard.ChooseFragment"
        tools:layout="@layout/fragment_choose" />


</navigation>