<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="72dp"
                android:text="@string/today"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size24"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="@id/today"
                app:layout_constraintTop_toBottomOf="@id/today"
                android:textColor="@color/white_gray"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cv"
        app:layout_constraintTop_toBottomOf="@id/cv"
        android:text="@string/habits"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size24"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin25"
        android:layout_marginBottom="156dp"
        app:cornerRadius="10dp"
        android:text="@string/create_habit"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:drawableLeft="@drawable/add"
        android:textAlignment="viewStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>