<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choose_"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin25"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chooseRv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:spanCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv"
        android:layout_marginTop="@dimen/margin25"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/item_choose" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chooseRv2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv"
        android:layout_marginTop="@dimen/margin25"
        android:layout_margin="@dimen/margin25"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/second_choose_item"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="@color/blue"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="571dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="571dp" />
</androidx.constraintlayout.widget.ConstraintLayout>